# cargo-check-i18n

./: .cargo-check-i18n-cache.json  .gitignore  Cargo.toml  readme.md
src/: main.rs
test-error/: .cargo-check-i18n-cache.json  Cargo.toml
