[package]
name = "cargo-check-i18n"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
colored = "2.0"
strip-ansi-escapes = "0.2.1"
toml = "0.9.4"
dirs = "6.0.0"
toml_edit = "0.23.2"
